--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p style="color: darkslategray;">Notice 1: Remainder to Pay exam fee.</p>
         <p style="color: darkslategray;">Notice 2: New Courses are available</p>
         <p style="color: darkslategray;">Notice 3: Placement selected students meet dean sir.</p>
-        <img src="slider-bg.jpg" alt="Background Image">
+        <img src="project.jpg" alt="Background Image">
     </div>
 </body>
 
